// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownAutoCompleteMenu renders with a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "id": "countries",
        "items": Array [
          Object {
            "label": <div>
              New Zealand
            </div>,
            "value": "new zealand",
          },
          Object {
            "label": <div>
              Australia
            </div>,
            "value": "australia",
          },
        ],
        "label": "countries",
        "value": "countries",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    closeOnSelect={true}
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
    shouldSelectWithEnter={true}
    shouldSelectWithTab={false}
  >
    <DropdownMenu
      closeOnEscape={true}
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-j1qymt-AutoCompleteRoot ejumqxq0"
        >
          <div
            className="css-j1qymt-AutoCompleteRoot ejumqxq0"
          >
            Click Me!
            <EmotionCssPropInternal
              __EMOTION_TYPE_PLEASE_DO_NOT_USE__={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "__emotion_base": "div",
                  "__emotion_forwardProp": undefined,
                  "__emotion_real": [Circular],
                  "__emotion_styles": Array [
                    "label:DropdownBubble;",
                    "background:",
                    [Function],
                    ";border:1px solid ",
                    [Function],
                    ";position:absolute;top:calc(100% - 1px);",
                    [Function],
                    ";right:0;box-shadow:",
                    [Function],
                    ";overflow:hidden;",
                    [Function],
                    ";",
                    [Function],
                    ";",
                    [Function],
                    ";z-index:",
                    [Function],
                    ";",
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "__emotion_base": "div",
                      "__emotion_forwardProp": undefined,
                      "__emotion_real": [Circular],
                      "__emotion_styles": Array [
                        "label:SettingsHeader;",
                        "position:sticky;top:0;z-index:",
                        [Function],
                        ";padding:",
                        "20px",
                        " ",
                        "30px",
                        ";border-bottom:1px solid ",
                        [Function],
                        ";background:#fff;height:",
                        [Function],
                        ";",
                      ],
                      "defaultProps": undefined,
                      "displayName": "SettingsHeader",
                      "render": [Function],
                      "withComponent": [Function],
                    },
                    " &{z-index:",
                    [Function],
                    ";}",
                    "label:BubbleWithMinWidth;",
                    Object {
                      "name": "13s4dk6",
                      "styles": "min-width:250px;",
                    },
                  ],
                  "defaultProps": undefined,
                  "displayName": "BubbleWithMinWidth",
                  "render": [Function],
                  "withComponent": [Function],
                }
              }
              blendCorner={true}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <BubbleWithMinWidth
                blendCorner={true}
                className="css-0"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <div
                  className="css-prdiwi-DropdownBubble-BubbleWithMinWidth ejumqxq11"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <StyledInputWrapper>
                    <div
                      className="css-5g2zi7-StyledInputWrapper ejumqxq2"
                    >
                      <StyledInput
                        autoFocus={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
                      >
                        <input
                          autoFocus={true}
                          className="css-1r9tgxm-Input-StyledInput ejumqxq3"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Filter search"
                          value=""
                        />
                      </StyledInput>
                      <InputLoadingWrapper>
                        <div
                          className="css-1bkeadj-InputLoadingWrapper ejumqxq1"
                        />
                      </InputLoadingWrapper>
                    </div>
                  </StyledInputWrapper>
                  <div>
                    <StyledItemList
                      data-test-id="autocomplete-list"
                      maxHeight={300}
                    >
                      <div
                        className="css-shdn34-StyledItemList ejumqxq8"
                        data-test-id="autocomplete-list"
                      >
                        <LabelWithBorder
                          key="countries"
                        >
                          <div
                            className="css-3vtpoq-LabelWithBorder ejumqxq5"
                          >
                            <GroupLabel>
                              <div
                                className="css-14hlgih-GroupLabel ejumqxq7"
                              >
                                countries
                              </div>
                            </GroupLabel>
                          </div>
                        </LabelWithBorder>
                        <AutoCompleteItem
                          highlightedIndex={0}
                          index={0}
                          key="new zealand-0"
                          onClick={[Function]}
                        >
                          <div
                            className="css-oz8j7l-AutoCompleteItem ejumqxq4"
                            onClick={[Function]}
                          >
                            <div>
                              New Zealand
                            </div>
                          </div>
                        </AutoCompleteItem>
                        <AutoCompleteItem
                          highlightedIndex={0}
                          index={1}
                          key="australia-1"
                          onClick={[Function]}
                        >
                          <div
                            className="css-16rbl1n-AutoCompleteItem ejumqxq4"
                            onClick={[Function]}
                          >
                            <div>
                              Australia
                            </div>
                          </div>
                        </AutoCompleteItem>
                      </div>
                    </StyledItemList>
                  </div>
                </div>
              </BubbleWithMinWidth>
            </EmotionCssPropInternal>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu renders without a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "label": <div>
          Apple
        </div>,
        "value": "apple",
      },
      Object {
        "label": <div>
          Bacon
        </div>,
        "value": "bacon",
      },
      Object {
        "label": <div>
          Corn
        </div>,
        "value": "corn",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    closeOnSelect={true}
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
    shouldSelectWithEnter={true}
    shouldSelectWithTab={false}
  >
    <DropdownMenu
      closeOnEscape={true}
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-j1qymt-AutoCompleteRoot ejumqxq0"
        >
          <div
            className="css-j1qymt-AutoCompleteRoot ejumqxq0"
          >
            Click Me!
            <EmotionCssPropInternal
              __EMOTION_TYPE_PLEASE_DO_NOT_USE__={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "__emotion_base": "div",
                  "__emotion_forwardProp": undefined,
                  "__emotion_real": [Circular],
                  "__emotion_styles": Array [
                    "label:DropdownBubble;",
                    "background:",
                    [Function],
                    ";border:1px solid ",
                    [Function],
                    ";position:absolute;top:calc(100% - 1px);",
                    [Function],
                    ";right:0;box-shadow:",
                    [Function],
                    ";overflow:hidden;",
                    [Function],
                    ";",
                    [Function],
                    ";",
                    [Function],
                    ";z-index:",
                    [Function],
                    ";",
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "__emotion_base": "div",
                      "__emotion_forwardProp": undefined,
                      "__emotion_real": [Circular],
                      "__emotion_styles": Array [
                        "label:SettingsHeader;",
                        "position:sticky;top:0;z-index:",
                        [Function],
                        ";padding:",
                        "20px",
                        " ",
                        "30px",
                        ";border-bottom:1px solid ",
                        [Function],
                        ";background:#fff;height:",
                        [Function],
                        ";",
                      ],
                      "defaultProps": undefined,
                      "displayName": "SettingsHeader",
                      "render": [Function],
                      "withComponent": [Function],
                    },
                    " &{z-index:",
                    [Function],
                    ";}",
                    "label:BubbleWithMinWidth;",
                    Object {
                      "name": "13s4dk6",
                      "styles": "min-width:250px;",
                    },
                  ],
                  "defaultProps": undefined,
                  "displayName": "BubbleWithMinWidth",
                  "render": [Function],
                  "withComponent": [Function],
                }
              }
              blendCorner={true}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <BubbleWithMinWidth
                blendCorner={true}
                className="css-0"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <div
                  className="css-prdiwi-DropdownBubble-BubbleWithMinWidth ejumqxq11"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <StyledInputWrapper>
                    <div
                      className="css-5g2zi7-StyledInputWrapper ejumqxq2"
                    >
                      <StyledInput
                        autoFocus={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
                      >
                        <input
                          autoFocus={true}
                          className="css-1r9tgxm-Input-StyledInput ejumqxq3"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Filter search"
                          value=""
                        />
                      </StyledInput>
                      <InputLoadingWrapper>
                        <div
                          className="css-1bkeadj-InputLoadingWrapper ejumqxq1"
                        />
                      </InputLoadingWrapper>
                    </div>
                  </StyledInputWrapper>
                  <div>
                    <StyledItemList
                      data-test-id="autocomplete-list"
                      maxHeight={300}
                    >
                      <div
                        className="css-shdn34-StyledItemList ejumqxq8"
                        data-test-id="autocomplete-list"
                      >
                        <AutoCompleteItem
                          highlightedIndex={0}
                          index={0}
                          key="apple-0"
                          onClick={[Function]}
                        >
                          <div
                            className="css-oz8j7l-AutoCompleteItem ejumqxq4"
                            onClick={[Function]}
                          >
                            <div>
                              Apple
                            </div>
                          </div>
                        </AutoCompleteItem>
                        <AutoCompleteItem
                          highlightedIndex={0}
                          index={1}
                          key="bacon-1"
                          onClick={[Function]}
                        >
                          <div
                            className="css-16rbl1n-AutoCompleteItem ejumqxq4"
                            onClick={[Function]}
                          >
                            <div>
                              Bacon
                            </div>
                          </div>
                        </AutoCompleteItem>
                        <AutoCompleteItem
                          highlightedIndex={0}
                          index={2}
                          key="corn-2"
                          onClick={[Function]}
                        >
                          <div
                            className="css-16rbl1n-AutoCompleteItem ejumqxq4"
                            onClick={[Function]}
                          >
                            <div>
                              Corn
                            </div>
                          </div>
                        </AutoCompleteItem>
                      </div>
                    </StyledItemList>
                  </div>
                </div>
              </BubbleWithMinWidth>
            </EmotionCssPropInternal>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu selects 1`] = `[MockFunction]`;
